# PRo3D-Extensions

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  VCPKG.json
.github/workflows/: cmake-multi-platform.yml
CooTransformation/: CMakeLists.txt
CooTransformation/include/CooTransformation/: CooTransformation.hpp
CooTransformation/python/: CMakeLists.txt
CooTransformation/python/include/PyCooTransformation/: CooTransformationPy.hpp
CooTransformation/python/src/: PyCooTransformation.cpp
CooTransformation/src/: CooTransformation.cpp
InstrumentPlatforms/: CMakeLists.txt
InstrumentPlatforms/include/InstrumentPlatforms/: InstrumentPlatforms.hpp
InstrumentPlatforms/python/: CMakeLists.txt
InstrumentPlatforms/python/include/PyInstrumentPlatforms/: InstrumentPlatformsPy.hpp
InstrumentPlatforms/python/src/: PyInstrumentPlatforms.cpp
cmake/: FindCSpice.cmake
